--- a/css/index.css
+++ b/css/index.css
@@ -5,15 +5,8 @@ background: gray;
 font-family: 'Ruluko', sans-serif;
 margin: 50px;
 }
-}
-.to
-{
-	width: 200px;
-	float: left;
-}
 
-.from
+.math
 {
-	width: 200px;
-	float: right;
+
 }
