--- a/css/sticky-footer.css
+++ b/css/sticky-footer.css
@@ -1,20 +1,37 @@
-/* Sticky footer styles
--------------------------------------------------- */
-#footer 
-{
-  position: bottom;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  background-color: #f5f5f5;
-}
+      /* Sticky footer styles
+      -------------------------------------------------- */
 
+      /* Set the fixed height of the footer here */
+      #push,
+      #footer 
+      {
+        height: 60px;
+      }
+      #footer 
+      {
+        background-color: #f5f5f5;
+      }
 
-/* Custom page CSS
--------------------------------------------------- */
-/* Not required for template or sticky footer method. */
+      /* Lastly, apply responsive CSS fixes as necessary */
+      @media (max-width: 767px) {
+        #footer {
+          margin-left: -20px;
+          margin-right: -20px;
+          padding-left: 20px;
+          padding-right: 20px;
+          position: bottom;
+        }
+      }
 
-.container .text-muted {
-  margin: 20px 0;
-}
+      /* Custom page CSS
+      -------------------------------------------------- */
+      /* Not required for template or sticky footer method. */
+/*
+      .container {
+        width: auto;
+        max-width: 680px;
+      }
+      .container .credit {
+        margin: 20px 0;
+      }
+*/
