Bunch of changes.

--- a/css/bootstrap-derek.css
+++ b/css/bootstrap-derek.css
@@ -45,9 +45,10 @@ template {
 a {
   background: transparent;
 }
+
 a:active,
-a:hover {
-  outline: 0;
+a:hover {	
+	outline: 0;
 }
 abbr[title] {
   border-bottom: 1px dotted;
@@ -760,15 +761,18 @@ pre code {
   margin-right: auto;
   margin-left: auto;
 }
+/* Custom CSS - no bullets on lists */
 .row {
   margin-right: -15px;
   margin-left: -15px;
+  list-style-type: none;
 }
 .col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
   position: relative;
   min-height: 1px;
   padding-right: 15px;
   padding-left: 15px;
+  
 }
 .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
   float: left;
@@ -3464,7 +3468,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav > li > a:hover,
 .nav > li > a:focus {
   text-decoration: none;
-  background-color: #eee;
+  background-color: rgb(0,148,115);
 }
 .nav > li.disabled > a {
   color: #999;
@@ -3479,7 +3483,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav .open > a,
 .nav .open > a:hover,
 .nav .open > a:focus {
-  background-color: #eee;
+  background-color: rgb(0,148,115);
   border-color: #428bca;
 }
 .nav .nav-divider {
@@ -3684,7 +3688,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
   .navbar-fixed-top .navbar-collapse,
   .navbar-static-top .navbar-collapse,
-  .navbar-fixed-bottom .navbar-collapse {
+  .navbar-fixed-bottom .navbar-collapse > a:active {
     padding-right: 0;
     padding-left: 0;
   }
@@ -3765,6 +3769,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   border: 1px solid transparent;
   border-radius: 4px;
 }
+
 .navbar-toggle:focus {
   outline: none;
 }
@@ -4027,9 +4032,11 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-inverse .navbar-brand {
   color: #999;
 }
+
+/* Custom CSS Element color; to give it three colors instead of two */
 .navbar-inverse .navbar-brand:hover,
 .navbar-inverse .navbar-brand:focus {
-  color: #fff;
+  color: rgb(0,148,115);
   background-color: transparent;
 }
 .navbar-inverse .navbar-text {
@@ -4038,16 +4045,19 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-inverse .navbar-nav > li > a {
   color: #999;
 }
+
+/* Custom CSS Element color; to give it three colors instead of two */
 .navbar-inverse .navbar-nav > li > a:hover,
 .navbar-inverse .navbar-nav > li > a:focus {
-  color: #fff;
+  color: rgb(0,148,115);
   background-color: transparent;
 }
+/*Custom CSS Implimentation for background color*/
 .navbar-inverse .navbar-nav > .active > a,
 .navbar-inverse .navbar-nav > .active > a:hover,
 .navbar-inverse .navbar-nav > .active > a:focus {
   color: #fff;
-  background-color: #080808;
+  background-color: rgb(0,148,115);
 }
 .navbar-inverse .navbar-nav > .disabled > a,
 .navbar-inverse .navbar-nav > .disabled > a:hover,
